syntax = "proto3";

option  go_package = "amusing-x.com/user/service";

package user;

message AuthenticationRequest {
  string server = 1;
  int64 user_id = 2;
  repeated string actions = 3;
}

message AuthenticationResponse {
  repeated AuthenticationInfo result = 1;
}

message AuthenticationInfo {
  string action = 1;
  bool hasPermission = 2;
}